Fix preview spinner alignment.

--- a/css/admin.less
+++ b/css/admin.less
@@ -1898,6 +1898,14 @@
 		height: 20px;
 	}
 
+	.so-panels-gutenberg-layout-preview-container {
+		.so-panels-spinner-container {
+			text-align: center;
+			> span {
+				display: inline-block;
+			}
+		}
+	}
 
 	.so-dropdown-wrapper {
 
